gccida/c2/init_flow
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_flow/src/cfg.c:600:6: error: use of undeclared identifier 'init_flow_initialized'
if ( init_flow_initialized ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_flow/src/cfg.c:648:1: error: use of undeclared identifier 'init_flow_initialized'
init_flow_initialized = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/init_flow/src/obj/cfg.o] Error 1
